[tool.poetry]
name = "cat4d"
version = "0.1.0"
description = ""
authors = ["David Hunter <davidhunter@catalyst.net.nz>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
openai = "^0.27.2"
urllib3 = "1.26.7"

[tool.poetry.dev-dependencies]
pyOpenSSL = "^23.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
